// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Indicator List elements Indicator Filter component renders group by options 1`] = `
<nav
  className="list__filters list__filters--block-label"
  id="id_div_indicators"
>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Find an indicator:
    </label>
    <div
      className=""
    >
      <div
        className="css-10nd86i"
        onKeyDown={[Function]}
      >
        <div
          className="css-vj8t7z"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1hwfws3"
          >
            <div
              className="css-1492t68"
            >
              None
            </div>
            <div
              className="css-1g6gooi"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-6-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Group indicators:
    </label>
    <div
      className=""
    >
      <div
        className="css-10nd86i"
        onKeyDown={[Function]}
      >
        <div
          className="css-vj8t7z"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1hwfws3"
          >
            <div
              className="css-1492t68"
            >
              Select...
            </div>
            <div
              className="css-1g6gooi"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-7-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Indicator List elements Indicator Filter component renders indicator options 1`] = `
<nav
  className="list__filters list__filters--block-label"
  id="id_div_indicators"
>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Find an indicator:
    </label>
    <div
      className=""
    >
      <div
        className="css-10nd86i"
        onKeyDown={[Function]}
      >
        <div
          className="css-vj8t7z"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1hwfws3"
          >
            <div
              className="css-xp4uvy"
            >
              one
            </div>
            <div
              className="css-1g6gooi"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-4-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Group indicators:
    </label>
    <div
      className=""
    >
      <div
        className="css-10nd86i"
        onKeyDown={[Function]}
      >
        <div
          className="css-vj8t7z"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1hwfws3"
          >
            <div
              className="css-1492t68"
            >
              Select...
            </div>
            <div
              className="css-1g6gooi"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-5-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Indicator List elements Indicator Filter component renders without crashing 1`] = `
<nav
  className="list__filters list__filters--block-label"
  id="id_div_indicators"
>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Find an indicator:
    </label>
    <div
      className=""
    >
      <div
        className="css-10nd86i"
        onKeyDown={[Function]}
      >
        <div
          className="css-vj8t7z"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1hwfws3"
          >
            <div
              className="css-1492t68"
            >
              None
            </div>
            <div
              className="css-1g6gooi"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-2-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Group indicators:
    </label>
    <div
      className=""
    >
      <div
        className="css-10nd86i"
        onKeyDown={[Function]}
      >
        <div
          className="css-vj8t7z"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1hwfws3"
          >
            <div
              className="css-1492t68"
            >
              Select...
            </div>
            <div
              className="css-1g6gooi"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  disabled={false}
                  id="react-select-3-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Indicator List elements Indicator List Table component renders without crashing 1`] = `
<table
  className="table indicators-list"
>
  <thead>
    <tr
      className="table-header"
    >
      <th
        className=""
        id="id_indicator_name_col_header"
      >
        Indicator
      </th>
      <th
        className=""
        id="id_indicator_buttons_col_header"
      >
         
      </th>
      <th
        className=""
        id="id_indicator_level_col_header"
      >
        Level
      </th>
      <th
        className=""
        id="id_indicator_unit_col_header"
      >
        Unit of measure
      </th>
      <th
        className="text-right"
        id="id_indicator_baseline_col_header"
      >
        Baseline
      </th>
      <th
        className="text-right"
        id="id_indicator_target_col_header"
      >
        Target
      </th>
    </tr>
  </thead>
  <tbody />
</table>
`;

exports[`Indicator List elements Status Header component calls for filter title 1`] = `
<div
  className="indicators-list__header"
>
  <h3
    className="no-bold"
  >
    <span
      id="indicators-list-title"
    >
      %s indicator is &gt;15% above target
    </span>
    <a
      className="ml-2"
      href="#"
      id="show-all-indicators"
      onClick={[Function]}
    >
      <small>
        Show all
      </small>
    </a>
  </h3>
  <div>
    <button
      className="btn btn-link btn-add"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <i
        className="fas fa-plus-circle"
      />
       
      Add indicator
    </button>
  </div>
</div>
`;

exports[`Indicator List elements Status Header component renders filter applied 1`] = `
<div
  className="indicators-list__header"
>
  <h3
    className="no-bold"
  >
    <span
      id="indicators-list-title"
    >
      %s indicator
    </span>
    <a
      className="ml-2"
      href="#"
      id="show-all-indicators"
      onClick={[Function]}
    >
      <small>
        Show all
      </small>
    </a>
  </h3>
  <div>
    <button
      className="btn btn-link btn-add"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <i
        className="fas fa-plus-circle"
      />
       
      Add indicator
    </button>
  </div>
</div>
`;

exports[`Indicator List elements Status Header component renders read only 1`] = `
<div
  className="indicators-list__header"
>
  <h3
    className="no-bold"
  >
    <span
      id="indicators-list-title"
    >
      %s indicator
    </span>
  </h3>
  <div />
</div>
`;

exports[`Indicator List elements Status Header component renders without crashing 1`] = `
<div
  className="indicators-list__header"
>
  <h3
    className="no-bold"
  >
    <span
      id="indicators-list-title"
    >
      %s indicator
    </span>
  </h3>
  <div>
    <button
      className="btn btn-link btn-add"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <i
        className="fas fa-plus-circle"
      />
       
      Add indicator
    </button>
  </div>
</div>
`;
